tests/NormalTests/paczka1/fuzzy1/54022946.err
Error in line 4: l23 S967 86,0
Error in line 5: l23 S240 90,9
Error in line 6: RKO S240 77,5
Error in line 9: XdUD S244 77,6
Error in line 14: l23 S153 98,8
Error in line 15: l23 A376 13,6
Error in line 16: l23 S967 61,3
Error in line 21: uteHVA S153 27,7
Error in line 34: Atk5yM A376 3,3
Error in line 31: XdUD A376 70,5
